fix scrollbar position and color

--- a/src/resource/css/base.less
+++ b/src/resource/css/base.less
@@ -28,6 +28,7 @@ a {
 .app {
   width: 334px;
   min-height: 100%;
+  height: 100%;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -66,6 +67,8 @@ a {
   background: @appBg;
   font-size: 1.4rem;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
 }
 
 .button {
